--- a/public/kanbas/assignments/edit.html
+++ b/public/kanbas/assignments/edit.html
@@ -11,7 +11,7 @@
             <tr valign="top">
                 <td>
                     <ul>
-                        <li><a href="#">Account</a></li>
+                        <li><a href="../profile/index.html">Account</a></li>
                         <li><a href="#">Dashboard</a></li>
                         <li><a href="#">Courses</a></li>
                         <li><a href="#">Calendar</a></li>
