--- a/public/kanbas/home.html
+++ b/public/kanbas/home.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <table width="100%">
         <tbody>
@@ -77,7 +79,8 @@
                                 <li>
                                     SLIDES
                                     <ul><a href="#">Introduction to Web Development Links to an external site.</a></ul>
-                                    <ul><a href="#">Creating an HTTP server with Node.js Links to an external site.</a></ul>
+                                    <ul><a href="#">Creating an HTTP server with Node.js Links to an external site.</a>
+                                    </ul>
                                     <ul><a href="#">Creating a React Application Links to an external site.</a></ul>
                                 </li>
                             </ul>
@@ -127,4 +130,5 @@
         </tbody>
     </table>
 </body>
+
 </html>
