--- a/public/kanbas/profile/profile.html
+++ b/public/kanbas/profile/profile.html
@@ -92,63 +92,20 @@
                 <div class="wd-flex-grow-1 wd-flex-row-container">
                     <div class="wd-profile-info">
                         <i class="fa-regular fa-user fa-5x mb-3" style="color: #db1a1a;"></i><br />
-                        <div class="mb-3">
-                            <label class="form-label">Name</label>
-                            <input type="name" class="form-control" id="exampleFormControlInput1"
-                                placeholder="Caleb Lee">
-                        </div>
-                        <div class="mb-3">
-                            <label class="form-label">Pronouns</label>
-                            <select name="pronouns" id="pronouns" class="form-select">
-                                <option value="">None</option>
-                                <option value="He/Him">He/Him</option>
-                                <option value="She/Her">She/Her</option>
-                                <option value="They/Them">They/Them</option>
-                                <option value="He/They">He/They</option>
-                                <option value="She/They">She/They</option>
-                                <option value="He/She/They">He/She/They</option>
-                            </select>
-                        </div>
-                        <div class="mb-3">
-                            <label class="form-label">Title</label>
-                            <input type="name" class="form-control" id="exampleFormControlInput1" placeholder="">
-                        </div>
+                        <h2>Caleb Lee</h2>
                         <br />
                         <h3>Contact</h3>
                         <p>No registered services, you can add some on the settings page.</p>
-                        <br/>
                         <h3>Biography</h3>
-                        <div class="mb-3">
-                            <textarea class="form-control" id="exampleFormControlTextarea1"
-                                rows="3">Northeastern 3rd year computer science student</textarea>
-                        </div>
-                        <br/>
+                        <p>Northeastern 3rd year computer science student</p>
                         <h3>Links</h3>
-                        <div class="wd-flex-row-container">
-                            <div lcass="px-2">
-                                <label class="form-label">Title</label>
-                                <input type="name" class="form-control" id="exampleFormControlInput1"
-                                    placeholder="Caleb Lee">
-                            </div>
-                            <p>→</p>
-                            <div class="px-2">
-                                <label class="form-label">URL</label>
-                                <input type="name" class="form-control" id="exampleFormControlInput1"
-                                    placeholder="Caleb Lee">
-                            </div>
-                        </div>
-                        <button>Add another link</button>
-                        <hr/>
-                        <div class="wd-float-right">
-                            <button class="btn btn-secondary">Cancel</button>
-                            <button class="btn btn-danger">Save Profile</button>
-                        </div>
+                        <a href="https://www.youtube.com/watch?v=xgY59LQfZSA">Youtube</a>
                     </div>
                     <div class="wd-edit-button">
-                        <form action="profile.html">
+                        <form action="edit.html">
                             <button>
                                 <i class="fa-solid fa-pencil"></i>
-                                Cancel Editing
+                                Edit Profile
                             </button>
                         </form>
                     </div>
