fixed nav links

--- a/public/index.html
+++ b/public/index.html
@@ -41,6 +41,6 @@
     -->
     <a href="labs/a1/index.html">Link to Lab 1</a>
     <a href="labs/a2/index.html">Link to Lab 2</a>
-    <a href="kanbas/home.html">Link to Kanbas</a>
+    <a href="kanbas/profile.html">Link to Kanbas</a>
   </body>
 </html>
