--- a/public/kanbas/dashboard/dashboard.html
+++ b/public/kanbas/dashboard/dashboard.html
@@ -32,7 +32,7 @@
                         Dashboard</a>
                 </li>
                 <li>
-                    <a href="/Kanbas/Courses/Home/screen.html">
+                    <a href="../assignments/index.html">
                         <i class="fa-solid fa-book fa-2xl mb-3"></i><br />
                         Courses</a>
                 </li>
