--- a/public/kanbas/profile/profile.html
+++ b/public/kanbas/profile/profile.html
@@ -21,7 +21,7 @@
                     <img src="../../images/neu.png" class="wd-kanbas-logo" />
                 </li>
                 <li class="wd-kanbas-selected">
-                    <a href="profile.html" id="wd-kanbas-selected-text">
+                    <a href="#" id="wd-kanbas-selected-text">
                         <i class="fa-regular fa-user fa-2xl mb-3"></i><br />
                         Account</a>
                 </li>
@@ -31,7 +31,7 @@
                         Dashboard</a>
                 </li>
                 <li>
-                    <a href="/Kanbas/Courses/Home/screen.html">
+                    <a href="../assignments/index.html">
                         <i class="fa-solid fa-book fa-2xl mb-3"></i><br />
                         Courses</a>
                 </li>
