--- a/public/kanbas/assignments/index.html
+++ b/public/kanbas/assignments/index.html
@@ -11,8 +11,8 @@
             <tr valign="top">
                 <td>
                     <ul>
-                        <li><a href="../profile/index.html">Account</a></li>
-                        <li><a href="#">Dashboard</a></li>
+                        <li><a href="../profile/profile.html">Account</a></li>
+                        <li><a href="../dashboard/dashboard.html">Dashboard</a></li>
                         <li><a href="#">Courses</a></li>
                         <li><a href="#">Calendar</a></li>
                         <li><a href="#">Inbox</a></li>
