--- a/public/kanbas/grades.html
+++ b/public/kanbas/grades.html
@@ -13,8 +13,8 @@
             <tr valign="top">
                 <td>
                     <ul>
-                        <li><a href="profile/index.html">Account</a></li>
-                        <li><a href="#">Dashboard</a></li>
+                        <li><a href="profile/profile.html">Account</a></li>
+                        <li><a href="dashboard/dashboard.html">Dashboard</a></li>
                         <li><a href="#">Courses</a></li>
                         <li><a href="#">Calendar</a></li>
                         <li><a href="#">Inbox</a></li>
@@ -26,7 +26,7 @@
                 </td>
                 <td>
                     <ul>
-                        <li><a href="#">Home</a></li>
+                        <li><a href="home.html">Home</a></li>
                         <li><a href="#">Modules</a></li>
                         <li><a href="#">Piazza</a></li>
                         <li><a href="#">Zoom Meetings</a></li>
