--- a/public/kanbas/home.html
+++ b/public/kanbas/home.html
@@ -13,9 +13,9 @@
             <tr valign="top">
                 <td>
                     <ul>
-                        <li><a href="profile/index.html">Account</a></li>
-                        <li><a href="#">Dashboard</a></li>
-                        <li><a href="#">Courses</a></li>
+                        <li><a href="profile/profile.html">Account</a></li>
+                        <li><a href="dashboard/dashboard.html">Dashboard</a></li>
+                        <li><a href="assignments/index.html">Courses</a></li>
                         <li><a href="#">Calendar</a></li>
                         <li><a href="#">Inbox</a></li>
                         <li><a href="#">History</a></li>
